--- a/static/css/blue.css
+++ b/static/css/blue.css
@@ -20,13 +20,13 @@
 
 a,
 h3.article-title a:hover {
-  color: rgb(127,140,180); 
+  color: rgb(0, 45,	114); 
 }
 
 
 a:hover,
 a:focus {
-  color: rgb(52,60,86);
+  color: rgb(191, 191, 191);
 }
 
 /*************************************************
@@ -34,7 +34,7 @@ a:focus {
  **************************************************/
 
 .article-metadata a:hover {
-  color: rgb(127,140,180);
+  color: rgb(0, 45,	114);
 }
 
 /*************************************************
@@ -42,7 +42,7 @@ a:focus {
  **************************************************/
 
 .btn-primary {
-  border-color: rgb(127,140,180);
+  border-color: rgb(0, 45,	114);
   /*background: rgb(127,140,180);*/
 }
 
@@ -51,7 +51,7 @@ a:focus {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  background: rgb(127,140,180);
+  background: rgb(0, 45,	114);
 }
 
 
@@ -61,8 +61,8 @@ a:focus {
 
 
 .btn-primary.btn-outline {
-  color: rgb(127,140,180);
-  border-color: rgb(127,140,180);
+  color: rgb(0, 45,	114);
+  border-color: rgb(0, 45,	114);
 }
 
 /*************************************************
@@ -72,7 +72,7 @@ a:focus {
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
-  color: rgb(127,140,180);
+  color: rgb(0, 45,	114);
   font-weight: 700;
   background-color: transparent !important; /* Override Bootstrap. */
 }
@@ -82,7 +82,7 @@ a:focus {
 .dropdown-menu > .active > a:hover {
   color: #fff;
   text-decoration: none;
-  background-color: rgb(127,140,180);
+  background-color: rgb(0, 45,	114);
   outline: 0;
 }
 
@@ -91,7 +91,7 @@ a:focus {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover {
-    color: rgb(127,140,180);
+    color: rgb(0, 45,	114);
     background-color: transparent;
   }
 
@@ -103,17 +103,17 @@ a:focus {
  
 
 .btn-toolbar .btn.btn-primary {
-  background: rgb(127,140,180);
+  background: rgb(0, 45,	114);
 }
 
 .btn-toolbar .btn.btn-primary:hover,
 .btn-toolbar .btn.btn-primary:focus {
-  background-color: rgba(127,140,180,0.6);
+  background-color: rgba(0, 45,	114,0.6);
 }
 
 .btn-toolbar .btn.btn-primary:active,
 .btn-toolbar .btn.btn-primary.active {
-  background-color: rgba(52,60,86,1);
+  background-color: rgba(191,191,191,1);
 }
 
 /*************************************************
@@ -121,13 +121,13 @@ a:focus {
  **************************************************/
 
 .pub-icon {
-  color: rgb(52,60,86);
+  color: rgb(191,191,191);
   font-size: 0.81em;
   padding-top: 6px;
 }
 
 .pub-list-item .pub-publication {
-  color: rgb(132, 214, 211);
+  color: rgb(0, 45,	114);
   font-size: 1rem;
 }
 
@@ -137,9 +137,9 @@ a:focus {
  **************************************************/
 
 html {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'BentonSans Regular', sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
   color: rgba(0,0,0,0.8);
   line-height: 1.65;
 }
